--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Extractor de audio para Flutter",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js" 
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ytdl-core": "^4.11.5", 
+    "ytdl-core-muxer": "^1.0.0", // 💡 CAMBIAMOS DE ytdl-core A ESTA
     "cors": "^2.8.5"
   },
   "engines": {
