--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ytdl-core-muxer": "^1.0.0", // 💡 CAMBIAMOS DE ytdl-core A ESTA
+    "ytdl-core-muxer": "^1.0.0",
     "cors": "^2.8.5"
   },
   "engines": {
